@@ -51,11 +51,9 @@ def scatter_plot(measurement,
     # Commence plotting
     if axScatter is not None:
         raise NotImplementedError("Tell Chaco to reuse plots?")
-        #plt.figure(1)
-        #axScatter = plt.axes()
 
-    scalex = mm.config["Plotting"]["Scale X"].lower()
-    scaley = mm.config["Plotting"]["Scale Y"].lower()
+    scalex = mm.config["plotting"]["scale x"].lower()
+    scaley = mm.config["plotting"]["scale y"].lower()
 
     pd = ca.ArrayPlotData()
     
@@ -281,19 +279,37 @@ def set_scatter_data(plot, mm):
 
     # Set x-y limits
     xlim = plot.index_mapper.range
-    xmin = mm.config["plotting"][xax+" min"]
-    xmax = mm.config["plotting"][xax+" max"]
-    if xmin == xmax:
-        xmin = x[~bad].min()
-        xmax = x[~bad].max()
+    xmin, xmax = get_plot_limits(axis="x", data=x[~bad], cfg=mm.config)
     xlim.low = xmin
     xlim.high = xmax
 
     ylim = plot.value_mapper.range
-    ymin = mm.config["plotting"][yax+" min"]
-    ymax = mm.config["plotting"][yax+" max"]
-    if ymin == ymax:
-        ymin = y[~bad].min()
-        ymax = y[~bad].max()
+    ymin, ymax = get_plot_limits(axis="y", data=y[~bad], cfg=mm.config)
     ylim.low = ymin
     ylim.high = ymax
+
+
+def get_plot_limits(axis, data, cfg):
+    feature = cfg["plotting"]["axis {}".format(axis)].lower()
+    scale = cfg["plotting"]["scale {}".format(axis)].lower()
+    dmin = cfg["plotting"][feature + " min"]
+    dmax = cfg["plotting"][feature + " max"]
+    if dmin == dmax:
+        dmin = data.min()
+        dmax = data.max()
+    if scale == "log":
+        if dmin <= 0:
+            if feature.startswith("fl") and feature.count("_max"):
+                # fluorescence maxima data
+                dmin = 1
+            else:
+                # compute std and mean
+                ld = np.log(data[data>0])
+                if len(ld):
+                    dmin = np.exp(ld.mean() - 2 * ld.std())
+                else:
+                    dmin = .1
+        if dmax <= 0:
+            dmax = 1
+
+    return dmin, dmax
